compiler/fir/resolve/testData/resolve/stdlib/problems/functionAndFunctionN.kt
fun takeAnyFun(function: Function<*>) {}

fun test(block: () -> Unit) {
    <!INAPPLICABLE_CANDIDATE!>takeAnyFun<!>(block)
}
